--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "eslint-plugin-react": "^7.0.1",
     "expect.js": "^0.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "chroma-js": "^1.3.4"
+  }
 }
