--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expect.js": "^0.3.1"
   },
   "dependencies": {
-    "chroma-js": "^1.3.4"
+    "chroma-js": "^1.3.4",
+    "hyperapp": "^0.12.1"
   }
 }
